--- a/index.html
+++ b/index.html
@@ -3101,6 +3101,7 @@
             });
 
             const certificates = [
+                { src: "https://i.imgur.com/kKZz1sp.png", alt: "Sertifikat Ethical Hacker", title: "Ethical Hacker For Dummies", desc: "Digital Talent Scholarship - 2025" },
                 { src: "https://i.imgur.com/wZ7owwo.png", alt: "Sertifikat Magang DLHK DIY", title: "Magang DLHK DIY", desc: "Dinas Lingkungan Hidup & Kehutanan DIY - 2024" },
                 { src: "https://i.imgur.com/fgV6iQP.png", alt: "Sertifikat Literasi Digital", title: "Literasi Digital", desc: "Kemkominfo - 2023" },
                 { src: "https://i.imgur.com/eyW5LUw.png", alt: "Sertifikat Seminar Cyber Security", title: "Seminar Keamanan Siber", desc: "HIMATEKNO FTTI UNJAYA - 2023" },
