--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                             <strong>Fondasi Teknologi Awal:</strong> Di masa inilah minat terhadap dunia teknologi mulai tumbuh, khususnya pada bidang pemrograman web. Memulai perjalanan belajar secara otodidak untuk memahami dasar-dasar pengembangan situs web, yang menjadi gerbang awal menuju ketertarikan yang lebih mendalam pada rekayasa perangkat lunak.
                                         </li>
                                         <li>
-                                            <strong>Pengembangan Karakter melalui Karate (INKADO):</strong> Aktif mengikuti kegiatan ekstrakurikuler Karate INKADO. Latihan ini tidak hanya membangun kekuatan fisik, tetapi juga menanamkan nilai-nilai fundamental seperti disiplin, fokus, dan ketekunan. Melalui Karate, soft skill penting seperti daya juang, pengendalian diri, dan mental yang kuat terbentuk, yang sangat mendukung pendekatan sistematis dan gigih dalam memecahkan masalah teknis.
+                                            <strong>Pengembangan Karakter melalui Karate (INKADO):</strong> Aktif mengikuti kegiatan ekstrakurikuler Karate INKADO. Latihan ini tidak hanya membangun kekuatan fisik, tetapi juga menanamkan nilai-nilai fundamental seperti disiplin, fokus, dan ketekunan. 
                                         </li>
                                     </ul>
                                 </div>
@@ -1027,4 +1027,5 @@
 
 </body>
 </html>
+
 
