--- a/index.html
+++ b/index.html
@@ -718,7 +718,8 @@
 
             <nav id="sidebar" class="sidebar border-l-2 border-[var(--border-gold)] p-8">
                 <div class="sticky top-0">
-                    <div class="flex justify-between items-center mb-6">
+                    <!-- MODIFIKASI: Menambahkan handle untuk drag -->
+                    <div id="sidebar-header" class="flex justify-between items-center mb-6 sidebar-drag-handle" title="Gerakkan Menu">
                         <h2 class="text-2xl font-bold nav-text">Daftar Isi</h2>
                         <button id="toggle-menu-btn" class="classic-button text-sm px-2 py-1" aria-label="Toggle Menu">
                             <i class="fas fa-bars" aria-hidden="true"></i>
@@ -726,30 +727,30 @@
                     </div>
                     <ul class="space-y-4">
                         <li><a href="#home-page" class="nav-link block py-2 text-lg hover:underline transition-all duration-300 active-page">
-                            <i class="fas fa-home mr-4 w-6 text-center" aria-hidden="true"></i><span class="nav-text">Beranda</span>
+                            <i class="fas fa-home fa-fw mr-3" aria-hidden="true"></i><span class="nav-text">Beranda</span>
                         </a></li>
                         <li><a href="#about-page" class="nav-link block py-2 text-lg hover:underline transition-all duration-300">
-                            <i class="fas fa-user mr-4 w-6 text-center" aria-hidden="true"></i><span class="nav-text">Profil</span>
+                            <i class="fas fa-user fa-fw mr-3" aria-hidden="true"></i><span class="nav-text">Profil</span>
                         </a></li>
                         <li><a href="#projects-page" class="nav-link block py-2 text-lg hover:underline transition-all duration-300">
-                            <i class="fas fa-newspaper mr-4 w-6 text-center" aria-hidden="true"></i><span class="nav-text">Laporan Utama</span>
+                            <i class="fas fa-newspaper fa-fw mr-3" aria-hidden="true"></i><span class="nav-text">Laporan Utama</span>
                         </a></li>
                         <li><a href="#pendidikan-page" class="nav-link block py-2 text-lg hover:underline transition-all duration-300">
-                            <i class="fas fa-graduation-cap mr-4 w-6 text-center" aria-hidden="true"></i><span class="nav-text">Latar Pendidikan</span>
+                            <i class="fas fa-graduation-cap fa-fw mr-3" aria-hidden="true"></i><span class="nav-text">Latar Pendidikan</span>
                         </a></li>
                         <li><a href="#sertifikasi-page" class="nav-link block py-2 text-lg hover:underline transition-all duration-300">
-                            <i class="fas fa-award mr-4 w-6 text-center" aria-hidden="true"></i><span class="nav-text">Sertifikasi</span>
+                            <i class="fas fa-award fa-fw mr-3" aria-hidden="true"></i><span class="nav-text">Sertifikasi</span>
                         </a></li>
                         <li><a href="#khazanah-page" class="nav-link block py-2 text-lg hover:underline transition-all duration-300">
-                            <i class="fas fa-book-open mr-4 w-6 text-center" aria-hidden="true"></i><span class="nav-text">Gagasan ilmu</span>
+                            <i class="fas fa-book-open fa-fw mr-3" aria-hidden="true"></i><span class="nav-text">Gagasan ilmu</span>
                         </a></li>
                         <li><a href="#contact-page" class="nav-link block py-2 text-lg hover:underline transition-all duration-300">
-                            <i class="fas fa-envelope mr-4 w-6 text-center" aria-hidden="true"></i><span class="nav-text">Hubungi Saya</span>
+                            <i class="fas fa-envelope fa-fw mr-3" aria-hidden="true"></i><span class="nav-text">Hubungi Saya</span>
                         </a></li>
                     </ul>
                     <div class="mt-8">
                         <button id="close-book-btn" class="classic-button w-full text-sm py-2">
-                            <i class="fas fa-arrow-left mr-2" aria-hidden="true"></i><span class="nav-text">Kembali ke Sampul</span>
+                            <i class="fas fa-arrow-left fa-fw mr-3" aria-hidden="true"></i><span class="nav-text">Kembali ke Sampul</span>
                         </button>
                     </div>
                 </div>
@@ -1027,5 +1028,3 @@
 
 </body>
 </html>
-
-
