--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                                     <h4 class="manuscript-title">SRS GREENHOUSE HIDROPONIK CERDAS</h4>
                                     <p class="text-sm mb-3 text-slate-600">Kategori: IoT, Perancangan Perangkat Lunak, SRS</p>
                                     <p class="manuscript-excerpt mb-4 text-justify">
-                                       Cetak biru untuk masa depan pertanian cerdas, merancang arsitektur sistem IoT berskala besar untuk mengelola ratusan greenhouse melalui aplikasi mobile. Dokumen SRS ini merinci kebutuhan fungsional dan non-fungsional, alur kerja sistem, dan desain antarmuka, menjadi fondasi pengembangan yang terstruktur.
+                                       Dokumen ini memaparkan rancangan arsitektur sistem IoT berskala besar yang dirancang untuk mengelola ratusan greenhouse melalui satu aplikasi mobile terpadu. Di dalamnya tercantum kebutuhan fungsional dan non-fungsional, alur kerja sistem, serta rancangan antarmuka pengguna. Seluruh elemen tersebut menjadi dasar pengembangan yang terarah dan terstruktur menuju pertanian modern yang efisien, adaptif, dan berkelanjutan.
                                     </p>
                                     <div class="project-buttons">
                                         <button data-modal-target="#srs-doc-modal" data-doc-id="18pBCviFKwYibi60U-z4pLEpcf1EJ8UX1" class="classic-button text-sm py-2 px-4">Buka Dokumen SRS</button>
@@ -1046,4 +1046,5 @@
 
 </body>
 </html>
+
 
